# llm-security-testing-framework

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TASKS.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
configs/: ci.yaml  docker.yaml  local.yaml  safe-example.yaml
docs/: architecture-review.md  architecture.md  creating-test-cases.md  ethical-use.md  extending-llmsec.md  portfolio-demo.md  roadmap.md  scoring-model.md  target-integration.md  threat-model.md
examples/: custom_evaluator.py  custom_target.py  custom_test.py  sample_campaign.py
lab/: Dockerfile  README.md
lab/app/: agent.py  fake_data.py  main.py  policies.py  tools.py
payloads/: context_manipulation.yaml  data_exfiltration.yaml  direct_prompt_injection.yaml  excessive_agency.yaml  indirect_prompt_injection.yaml  insecure_output_handling.yaml  jailbreak.yaml  system_prompt_leakage.yaml  tool_abuse.yaml
scripts/: regenerate_golden_fixtures.py
src/llmsec/: __init__.py  cli.py  config.py  constants.py  exceptions.py  logging.py  rendering.py
src/llmsec/attacks/: __init__.py  base.py  context_manipulation.py  data_exfiltration.py  direct_prompt_injection.py  excessive_agency.py  indirect_prompt_injection.py  insecure_output_handling.py  jailbreak.py  system_prompt_leakage.py  tool_abuse.py
src/llmsec/core/: comparison.py  dashboard.py  engine.py  evidence.py  registry.py  runner.py  scoring.py
src/llmsec/evaluators/: __init__.py  base.py  composite.py  keyword.py  policy.py  regex.py  semantic.py
src/llmsec/models/: __init__.py  campaign.py  result.py  target.py  test_case.py
src/llmsec/reporters/: __init__.py  charts.py  comparison_reporter.py  dashboard_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
src/llmsec/targets/: __init__.py  base.py  generic_http.py  mock_target.py  provider_adapter.py
src/llmsec/utils/: identifiers.py  redaction.py  retry.py  serialization.py  url_safety.py
templates/: comparison.html.j2  dashboard.html.j2  report.html.j2
tests/e2e/: test_full_scan_e2e.py
tests/fixtures/duplicate_id_payloads/: a.yaml  b.yaml
tests/fixtures/golden/: README.md  hardened.json  vulnerable.json
tests/fixtures/invalid_payloads/: broken.yaml
tests/fixtures/sample_payloads/: data_exfiltration.yaml  indirect_injection.yaml  jailbreak_multiturn.yaml  system_prompt_leakage.yaml  tool_abuse.yaml
tests/integration/: test_all_payloads_against_lab.py  test_generic_http_against_lab.py  test_golden_transcripts.py  test_lab_app.py  test_runner_against_lab.py  test_scan_cli_with_mock_target.py
tests/unit/: test_attacks_catalog.py  test_charts.py  test_cli.py  test_comparison.py  test_comparison_reporter.py  test_config.py  test_dashboard.py  test_dashboard_reporter.py  test_evaluators.py  test_evaluators_regex_semantic_policy_composite.py  test_evidence.py  test_identifiers.py  test_lab_agent.py  test_lab_policies.py  test_lab_tools.py  test_logging.py  test_models.py  test_provider_credentials_contract.py  test_redaction.py  test_registry.py  test_rendering.py  test_reporters.py  test_retry.py  test_runner_mechanics.py  test_scoring.py  test_serialization.py  test_targets_factory.py  test_targets_generic_http.py  test_targets_mock.py  test_targets_provider_adapter.py  test_url_safety.py
